--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                 </ul>
             </div> 
             </div>
+            <div class="socials">
                  <ul class="social-follow">
                         <li>
                             <a class="social-follow__link" href="#">
@@ -242,7 +243,7 @@
                             </a>
                         </li>
                     </ul>
-    <!-- </div> -->
+    </div> 
 </div>
 </footer>
         <!-- Footer Social networks -->
